force-app/main/default/objects/Task3__c/Task3__c.object-meta.xml
<CustomObject>
    <label>Task3</label>
    <nameField>
        <label>Task title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tasks3</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>