force-app/main/default/objects/Task3__c/fields/project__c.field-meta.xml
<CustomField>
    <fullName>project__c</fullName>
    <label>project</label>
    <referenceTo>project__c</referenceTo>
    <relationshipLabel>tasks3</relationshipLabel>
    <relationshipName>tasks3</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>