force-app/main/default/objects/Task3__c/fields/Task_date__c.field-meta.xml
<CustomField>
    <fullName>Task_date__c</fullName>
    <label>Task date</label>
    <type>Date</type>
</CustomField>