force-app/main/default/objects/Task3__c/fields/Task_description__c.field-meta.xml
<CustomField>
    <fullName>Task_description__c</fullName>
    <label>Task description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>